--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "messenger-quick-start",
+  "name": "messenger-webhook",
   "version": "1.0.0",
-  "description": "An example webhook for Facebook Messenger quick start tutorial.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/fbsamples/messenger-platform-samples.git"
-  },
-  "author": "Facebook",
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "request": "^2.72.0"
-  },
-  "engines": {
-    "node": "~4.1.2"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
 }
