--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "messenger-webhook",
+  "name": "fbchatbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Theus Jasper Busa",
   "license": "ISC",
